--- a/etc/effort/base/01.conf
+++ b/etc/effort/base/01.conf
@@ -13,17 +13,11 @@
 # Distances are approximate and measured the centers of the key.
 
 #        ~ 1 2 3 4 5 6   7 8 9 0 -   =
-[row 1]
-effort = 5 4 4 4 4 4 4.5 4 4 4 4 4.5 5.5
-
+[effort]
+row 1 = 5 4 4 4 4 4 4.5 4 4 4 4 4.5 5.5
 #        q w e r t   y u i o p [   ] \
-[row 2]
-effort = 2 2 2 2 2.5 3 2 2 2 2 2.5 4 6
-
+row 2 = 2 2 2 2 2.5 3 2 2 2 2 2.5 4 6
 #        a s d f g h j k l ; '
-[row 3]
-effort = 0 0 0 0 2 2 0 0 0 0 2
-
+row 3 = 0 0 0 0 2 2 0 0 0 0 2
 #        z x c v b   n m , . /
-[row 4]
-effort = 2 2 2 2 3.5 2 2 2 2 2
+row 4 = 2 2 2 2 3.5 2 2 2 2 2
