--- a/etc/tutorial-00.ini
+++ b/etc/tutorial-00.ini
@@ -21,7 +21,7 @@ wordlength = 6-10
 [kb_definition]
 # this is the input keyboard to use
 keyboard_input  = keyboards/qwerty.conf
-keyboard_output = out/tutorials/00/tmp-__config.get('main', 'runid')__.conf
+keyboard_output = ../out/tutorials/00/tmp-__config.get('main', 'runid')__.conf
 keyboard_output_show_parameters = current,annealing
 
 [kb_report]
@@ -29,10 +29,12 @@ stdout_period = 1
 stdout_filter = all
 
 report_period = 1
-report_filter = all # all | lower | lower_monotonic | update | none
+# all | lower | lower_monotonic | update | none
+report_filter = all
 
 draw_period   = 1
-draw_filter   = none # all | lower | lower_monotonic | update | none
+# all | lower | lower_monotonic | update | none
+draw_filter   = none
 
 [model]
 effort_model = ./effort/01.conf
@@ -41,7 +43,8 @@ effort_model = ./effort/01.conf
 action     = minimize
 iterations = 100
 t0         = 10
-p0         = 1       # p0 = 0 to avoid transitions to layouts with higher effort
+# p0 = 0 to avoid transitions to layouts with higher effort
+p0         = 0
 k          = 10
 minswaps   = 1
 maxswaps   = 2
@@ -57,74 +60,75 @@ fontc        = fonts/MINIC___.TTF
 mask = ./mask/letters.conf
 modes = ./modes/mode.conf
 
-pngfile_keyboard_input  = out/tutorials/00/input-__config.get('main', 'runid')__.png
-pngfile_keyboard_output = out/tutorials/00/output-__config.get('main', 'runid')__.png
+pngfile_keyboard_input  = ../out/tutorials/00/input-__config.get('main', 'runid')__.png
+pngfile_keyboard_output = ../out/tutorials/00/output-__config.get('main', 'runid')__.png
 
-imagedetaillevel = 2  # use block named 1 for detail level
-imageparamset    = 2  # use block named 1 for image parameters
+# use block named 1 for detail level
+imagedetaillevel = 2
+# use block named 1 for image parameters
+imageparamset    = 2
 
-    [imageparamsetdef_1]
-    keysize      = 35
-    fontsize     = 11
-    xshift       = 4
-    ucyshift     = 14
-    lcyshift     = 16
-    keyspacing   = 0.2
-    shadowsize   = 1
-    bottommargin = 30
+[imageparamsetdef 1]
+keysize      = 35
+fontsize     = 11
+xshift       = 4
+ucyshift     = 14
+lcyshift     = 16
+keyspacing   = 0.2
+shadowsize   = 1
+bottommargin = 30
 
-        [color_1]
-        imageborder = grey
-        keyshadow   = grey
-        background  = white
-        effort_color_i = lred
-        effort_color_f = lgreen
-        key         = white
-        keyborder   = blackp
+[color 1]
+imageborder = grey
+keyshadow   = grey
+background  = white
+effort_color_i = palevioletred
+effort_color_f = darkseagreen
+key         = white
+keyborder   = black
 
-    [imageparamsetdef_2]
-    keysize      = 23
-    fontsize     = 8
-    xshift       = 3
-    ucyshift     = 11
-    lcyshift     = 9
-    keyspacing   = 0.2
-    shadowsize   = 1
-    bottommargin = 15
+[imageparamsetdef 2]
+keysize      = 23
+fontsize     = 8
+xshift       = 3
+ucyshift     = 11
+lcyshift     = 9
+keyspacing   = 0.2
+shadowsize   = 1
+bottommargin = 15
 
-        [color_2]
-        imageborder = grey
-        keyshadow   = black
-        background  = white
-        effort_color_i = lred
-        effort_color_f = lgreen
-        key         = white
-        keyborder   = dgrey
+[color 2]
+imageborder = grey
+keyshadow   = black
+background  = white
+effort_color_i = palevioletred
+effort_color_f = darkseagreen
+key         = white
+keyborder   = lightslategrey
 
-    [imagedetaildef_1]
-    keyshadow   = yes
-    upcase      = some
-    lowcase     = yes
-    effortcolor = yes
-    fillkey     = yes
-    keyborder   = yes
-    finger      = yes
-    effort      = yes
-    hand        = yes
-    imageborder = yes
-    parameters  = yes
+[imagedetaildef 1]
+keyshadow   = yes
+upcase      = some
+lowcase     = yes
+effortcolor = yes
+fillkey     = yes
+keyborder   = yes
+finger      = yes
+effort      = yes
+hand        = yes
+imageborder = yes
+parameters  = yes
 
-    [imagedetaildef_2]
-    keyshadow   = yes
-    upcase      = some
-    lowcase     = yes
-    capitalize  = yes
-    effortcolor = no
-    fillkey     = yes
-    keyborder   = yes
-    finger      = no
-    effort      = no
-    hand        = no
-    imageborder = no
-    parameters  = no
-
+[imagedetaildef 2]
+keyshadow   = yes
+upcase      = some
+lowcase     = yes
+capitalize  = yes
+effortcolor = no
+fillkey     = yes
+keyborder   = yes
+finger      = no
+effort      = no
+hand        = no
+imageborder = no
+parameters  = no
